--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -16,6 +16,9 @@ svg path:hover {
     stroke-width: 1;
     opacity: 100;
 }
+.inner cover {
+    margin-top: 3rem;
+}
 #MD {
     background-color: #FCDABE;
 }
