--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -19,6 +19,9 @@ svg path:hover {
 .inner cover {
     margin-top: 3rem;
 }
+.modal {
+    color: black; 
+}
 #MD {
     background-color: #FCDABE;
 }
