--- a/css/cover.css
+++ b/css/cover.css
@@ -38,7 +38,7 @@ body {
   -webkit-box-pack: center;
   justify-content: center;
   color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  /* text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); */
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
@@ -51,7 +51,7 @@ body {
  * Header
  */
 .masthead {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem!important;
 }
 
 .masthead-brand {
@@ -94,7 +94,7 @@ body {
  * Cover
  */
 .cover {
-  padding: 0 1.5rem;
+  padding: 0 1.5rem!important ;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
