--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -28,6 +28,10 @@ svg path:hover {
 .modal {
     color: black; 
 }
+.note {
+    text-align: left!important;
+    color: black; 
+}
 #MD {
     background-color: #FCDABE;
 }
