--- a/css/cover.css
+++ b/css/cover.css
@@ -3,11 +3,11 @@
  */
 
 /* Links */
-a,
+/* a,
 a:focus,
-a:hover {
+a:hover { */
   /* color: #fff; */
-}
+/* } */
 
 /* Custom default button */
 .btn-secondary,
