smaller card headers

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -37,6 +37,9 @@ svg path:hover {
     text-align: left!important;
     color: black; 
 }
+.card-header{
+    padding: 0.25rem 0.25rem;
+}
 #MD {
     background-color: #FCDABE;
 }
