--- a/css/custom.css
+++ b/css/custom.css
@@ -50,6 +50,11 @@ svg path:hover {
   padding: 0.25rem 0.25rem;
 }
 
+svg path:visited {
+  fill: #D8D9DE !important;
+  cursor: pointer;
+}
+
 #MD {
   background-color: #FCDABE;
 }
