--- a/css/custom.css
+++ b/css/custom.css
@@ -65,6 +65,7 @@ footer {
 .btn-link {
   text-align: left;
   color: #333;
+  font-weight: bold;
 }
 
 .btn-link:hover {
@@ -73,6 +74,14 @@ footer {
 
 .note-icon {
   height: 1rem;
+}
+
+#card_col_1 {
+  margin-top: 1.5rem;
+}
+
+#card_col_2 {
+  margin-top: 1.5rem;
 }
 
 svg path:visited {
