--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -52,6 +52,7 @@ footer {
 .btn-link{
     text-align: left;
     color: #333;
+    font-weight: bold;
 }
 .btn-link:hover{
     color: black; 
@@ -59,6 +60,17 @@ footer {
 .note-icon{
     height: 1rem; 
 }
+#card_col_1{
+    margin-top: 1.5rem;
+}
+#card_col_2{
+    margin-top: 1.5rem;
+}
+// #three-data-points{
+//     border-style: solid;
+//     border-width: .75rem;
+//     border-color: white;
+// }
 svg path:visited {
     fill: #D8D9DE !important;
     cursor: pointer;
