--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -188,6 +188,9 @@ a:hover {
 .inner.cover{
     min-height: 100%;
 }
+#content-col{
+    min-width: 140px;
+}
 // #three-data-points{
 //     border-style: solid;
 //     border-width: .75rem;
