--- a/css/cover.css
+++ b/css/cover.css
@@ -27,7 +27,7 @@ a:hover { */
 html,
 body {
   height: 100%;
-  background-color: #333;
+  /* background-color: #333; */
 }
 
 body {
@@ -37,7 +37,7 @@ body {
   -ms-flex-pack: center;
   -webkit-box-pack: center;
   justify-content: center;
-  color: #fff;
+  /* color: #fff; */
   /* text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); */
   /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
 }
@@ -61,14 +61,14 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: #AAAAAA;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: #2D2D2D;
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -76,8 +76,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: #2D2D2D;
+  border-bottom-color:#2D2D2D;
 }
 
 @media (min-width: 48em) {
