--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -214,6 +214,7 @@ a:hover {
     cursor: pointer;
 }
 .number{
+    font-family: 'Montserrat', sans-serif;
     color: $micro-orange;
 }
 .number-type{
