--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -277,7 +277,10 @@ a:hover {
 }
 #explore_data_section{
     height: 100vh; 
-
+    padding: 3rem;
+    padding-bottom: 10rem;
+    margin-top: 3rem;
+    margin-bottom: 30rem;
 }
 #explore_data_container{
   vertical-align: middle;
