--- a/css/custom.css
+++ b/css/custom.css
@@ -269,6 +269,32 @@ a:hover {
   margin-bottom: 3.5rem;
 }
 
+figcaption {
+  display: none;
+  width: 15rem;
+  background-color: #747474;
+  color: #fff;
+  font-size: x-small;
+  text-align: center;
+  border-radius: 6px;
+  padding: 0.5rem;
+  position: absolute;
+  z-index: 1;
+  top: -5px;
+  left: 110%;
+}
+
+figcaption::after {
+  content: "";
+  position: absolute;
+  top: 5%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent #747474 transparent transparent;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 7px;
