--- a/css/custom.css
+++ b/css/custom.css
@@ -273,7 +273,7 @@ a:hover {
   margin-bottom: 3.5rem;
 }
 
-figcaption {
+.definition {
   display: none;
   width: 15rem;
   background-color: #747474;
@@ -288,7 +288,7 @@ figcaption {
   left: 110%;
 }
 
-figcaption::after {
+.definition::after {
   content: "";
   position: absolute;
   top: 5%;
