--- a/css/custom.css
+++ b/css/custom.css
@@ -241,7 +241,7 @@ a:hover {
 
 .indicator-link {
   font-family: "Raleway", sans-serif;
-  color: #01A6F0;
+  color: #747474;
   font-size: 0.95rem;
 }
 
