--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -259,7 +259,7 @@ a:hover {
 }
 .indicator-link{
     font-family: 'Raleway', sans-serif;
-    color: $micro-blue;
+    color: $micro-gray-medium;
     font-size: .95rem;
 }
 .number-definition{
