--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -365,7 +365,7 @@ a:hover {
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: $micro-gray-light; 
+//   background: $micro-gray-light; 
   border-radius: 7px;
 
 }
