--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -261,6 +261,9 @@ a:hover {
     font-family: 'Montserrat', sans-serif;
     color: $micro-gray-dark;
 }
+.indicator-heading{
+    color: $micro-gray-dark;
+}
 .inline-number{
     font-size: 1.25rem;
     font-weight: bold;
