--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -80,7 +80,7 @@ footer {
 .state-no {
     // fill: $micro-blue-dark;
     // stroke: "#ffffff" ;
-    fill: $red3; 
+    fill: $micro-gray-light; 
     stroke: white; 
     stroke-width: 1;
     opacity: 100;
