--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -96,6 +96,18 @@ footer {
     fill: $red3;
     stroke-width: 1;
 }
+#ribbon{
+    stroke: $micro-blue;
+    fill: $micro-blue;
+}
+.ribbon-state{
+    font-size: 1.5rem;
+}
+.card{
+    border-color: $micro-blue;
+    border-style: solid;
+    border-width: 1px;
+}
 .state:hover{
     cursor: pointer;
     fill: $micro-gray-medium;
